# HFT-Ledger

./: .gitignore  README.md  test_exchange.sh  websocket_client.html
hftx/: Cargo.toml  Makefile  performance_analysis.md
hftx/cli/: Cargo.toml
hftx/cli/src/: main.rs
hftx/exchange-service/: Cargo.toml
hftx/exchange-service/src/: exchange.rs  main.rs  types.rs  websocket.rs
hftx/exchange-service/static/: index.html
hftx/orderbook/: Cargo.toml
hftx/orderbook/benches/: orderbook_bench.rs
hftx/orderbook/src/: lib.rs  price_levels.rs  types.rs
hftx/scripts/: dev.sh
hftx/src/: latency_test.rs  main.rs
hftx/web/: .gitignore  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml
hftx/web/app/: globals.css  layout.tsx  page.tsx
hftx/web/components/: MarketBootstrap.tsx  SimEngine.tsx
hftx/web/components/sections/: Engine.tsx  Footer.tsx  Hero.tsx  Ladder.tsx  OrderEntry.tsx  Sim.tsx  TopBar.tsx  TradeTape.tsx
hftx/web/components/ui/: AnimatedNumber.tsx  Magnetic.tsx  Reveal.tsx  primitives.tsx
hftx/web/lib/: exchange.ts  format.ts  store.ts  types.ts  useFlashOnChange.ts
