[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook = { path = "../orderbook" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
